rdbms-postgresql/kube/pgadmin-service.yml
apiVersion: v1
kind: Service
metadata:
  name: pgadmin
spec:
  selector:
    app: pgadmin
  type: NodePort
  ports:
    - port: 80
      targetPort: 80
