rdbms-postgresql/kube/postgres-service.yml
apiVersion: v1
kind: Service
metadata:
  name: postgres
  labels:
    app: postgres
    tier: database
spec:
  selector:
    app: postgres
    tier: database
  type: NodePort
  ports:
    - port: 5432
      targetPort: 5432
